--- a/hw5.ipynb
+++ b/hw5.ipynb
@@ -2668,21 +2668,159 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>2</th>\n",
+       "      <th>0</th>\n",
+       "      <th>6</th>\n",
+       "      <th>8</th>\n",
+       "      <th>1</th>\n",
+       "      <th>7</th>\n",
+       "      <th>5</th>\n",
+       "      <th>9</th>\n",
+       "      <th>3</th>\n",
+       "      <th>4</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>mean_test_score</th>\n",
+       "      <td>0.643577</td>\n",
+       "      <td>0.642885</td>\n",
+       "      <td>0.640925</td>\n",
+       "      <td>0.636841</td>\n",
+       "      <td>0.636177</td>\n",
+       "      <td>0.635391</td>\n",
+       "      <td>0.63539</td>\n",
+       "      <td>0.631207</td>\n",
+       "      <td>0.630724</td>\n",
+       "      <td>0.629216</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std_test_score</th>\n",
+       "      <td>0.003832</td>\n",
+       "      <td>0.004835</td>\n",
+       "      <td>0.003187</td>\n",
+       "      <td>0.004508</td>\n",
+       "      <td>0.003726</td>\n",
+       "      <td>0.003138</td>\n",
+       "      <td>0.003271</td>\n",
+       "      <td>0.004705</td>\n",
+       "      <td>0.004495</td>\n",
+       "      <td>0.002543</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean_fit_time</th>\n",
+       "      <td>0.019985</td>\n",
+       "      <td>0.020486</td>\n",
+       "      <td>0.020648</td>\n",
+       "      <td>0.020265</td>\n",
+       "      <td>0.020276</td>\n",
+       "      <td>0.020184</td>\n",
+       "      <td>0.019998</td>\n",
+       "      <td>0.021251</td>\n",
+       "      <td>0.019916</td>\n",
+       "      <td>0.01975</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>param_kneighborsclassifier__n_neighbors</th>\n",
+       "      <td>10</td>\n",
+       "      <td>25</td>\n",
+       "      <td>50</td>\n",
+       "      <td>5</td>\n",
+       "      <td>75</td>\n",
+       "      <td>75</td>\n",
+       "      <td>50</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>param_kneighborsclassifier__weights</th>\n",
+       "      <td>distance</td>\n",
+       "      <td>uniform</td>\n",
+       "      <td>distance</td>\n",
+       "      <td>uniform</td>\n",
+       "      <td>distance</td>\n",
+       "      <td>uniform</td>\n",
+       "      <td>uniform</td>\n",
+       "      <td>uniform</td>\n",
+       "      <td>distance</td>\n",
+       "      <td>uniform</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                2         0         6  \\\n",
+       "mean_test_score                          0.643577  0.642885  0.640925   \n",
+       "std_test_score                           0.003832  0.004835  0.003187   \n",
+       "mean_fit_time                            0.019985  0.020486  0.020648   \n",
+       "param_kneighborsclassifier__n_neighbors        10        25        50   \n",
+       "param_kneighborsclassifier__weights      distance   uniform  distance   \n",
+       "\n",
+       "                                                8         1         7  \\\n",
+       "mean_test_score                          0.636841  0.636177  0.635391   \n",
+       "std_test_score                           0.004508  0.003726  0.003138   \n",
+       "mean_fit_time                            0.020265  0.020276  0.020184   \n",
+       "param_kneighborsclassifier__n_neighbors         5        75        75   \n",
+       "param_kneighborsclassifier__weights       uniform  distance   uniform   \n",
+       "\n",
+       "                                                5         9         3  \\\n",
+       "mean_test_score                           0.63539  0.631207  0.630724   \n",
+       "std_test_score                           0.003271  0.004705  0.004495   \n",
+       "mean_fit_time                            0.019998  0.021251  0.019916   \n",
+       "param_kneighborsclassifier__n_neighbors        50         3         3   \n",
+       "param_kneighborsclassifier__weights       uniform   uniform  distance   \n",
+       "\n",
+       "                                                4  \n",
+       "mean_test_score                          0.629216  \n",
+       "std_test_score                           0.002543  \n",
+       "mean_fit_time                             0.01975  \n",
+       "param_kneighborsclassifier__n_neighbors        10  \n",
+       "param_kneighborsclassifier__weights       uniform  "
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "param_grid_knn = {\n",
-    "    \"knn__n_neighbors\": [3, 5, 10, 25, 50, 75, 100],\n",
-    "    \"knn__weights\": ['distance', 'uniform']\n",
+    "    \"kneighborsclassifier__n_neighbors\": [3, 5, 10, 25, 50, 75, 100],\n",
+    "    \"kneighborsclassifier__weights\": ['distance', 'uniform']\n",
     "}\n",
     "\n",
     "random_search_knn = RandomizedSearchCV(\n",
     "    estimator=make_pipeline(ct, KNeighborsClassifier()),\n",
-    "    param_distributions=param_grid_knn,\n",
-    "    n_jobs=-1\n",
+    "    param_distributions=param_grid_knn, \n",
+    "    n_jobs=-1,\n",
     "    n_iter=10, \n",
     "    scoring=recall_scorer,  \n",
     "    refit=True,  \n",
@@ -2697,8 +2835,8 @@
     "        \"mean_test_score\",\n",
     "        \"std_test_score\",\n",
     "        \"mean_fit_time\",\n",
-    "        \"param_knn__n_neighbors\",\n",
-    "        \"param_knn__weights\"\n",
+    "        \"param_kneighborsclassifier__n_neighbors\",\n",
+    "        \"param_kneighborsclassifier__weights\"\n",
     "    ]\n",
     "].sort_values(\n",
     "    by=[\"mean_test_score\"],  \n",
@@ -2710,11 +2848,135 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>4</th>\n",
+       "      <th>5</th>\n",
+       "      <th>7</th>\n",
+       "      <th>6</th>\n",
+       "      <th>1</th>\n",
+       "      <th>3</th>\n",
+       "      <th>9</th>\n",
+       "      <th>2</th>\n",
+       "      <th>8</th>\n",
+       "      <th>0</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>mean_test_score</th>\n",
+       "      <td>0.649774</td>\n",
+       "      <td>0.6494</td>\n",
+       "      <td>0.648239</td>\n",
+       "      <td>0.645366</td>\n",
+       "      <td>0.643347</td>\n",
+       "      <td>0.582406</td>\n",
+       "      <td>0.516262</td>\n",
+       "      <td>0.511846</td>\n",
+       "      <td>0.511011</td>\n",
+       "      <td>0.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std_test_score</th>\n",
+       "      <td>0.006279</td>\n",
+       "      <td>0.004698</td>\n",
+       "      <td>0.005155</td>\n",
+       "      <td>0.007157</td>\n",
+       "      <td>0.003558</td>\n",
+       "      <td>0.003688</td>\n",
+       "      <td>0.005653</td>\n",
+       "      <td>0.001751</td>\n",
+       "      <td>0.002695</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean_fit_time</th>\n",
+       "      <td>29.625869</td>\n",
+       "      <td>17.211342</td>\n",
+       "      <td>19.630345</td>\n",
+       "      <td>60.99253</td>\n",
+       "      <td>22.077808</td>\n",
+       "      <td>47.848502</td>\n",
+       "      <td>89.344615</td>\n",
+       "      <td>47.042878</td>\n",
+       "      <td>66.248002</td>\n",
+       "      <td>53.058155</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>param_svc__C</th>\n",
+       "      <td>50.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>param_svc__gamma</th>\n",
+       "      <td>0.01</td>\n",
+       "      <td>auto</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>auto</td>\n",
+       "      <td>0.001</td>\n",
+       "      <td>1</td>\n",
+       "      <td>10</td>\n",
+       "      <td>1</td>\n",
+       "      <td>10</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                          4          5          7         6          1  \\\n",
+       "mean_test_score    0.649774     0.6494   0.648239  0.645366   0.643347   \n",
+       "std_test_score     0.006279   0.004698   0.005155  0.007157   0.003558   \n",
+       "mean_fit_time     29.625869  17.211342  19.630345  60.99253  22.077808   \n",
+       "param_svc__C           50.0        1.0        1.0     100.0      100.0   \n",
+       "param_svc__gamma       0.01       auto        0.1      auto      0.001   \n",
+       "\n",
+       "                          3          9          2          8          0  \n",
+       "mean_test_score    0.582406   0.516262   0.511846   0.511011        0.5  \n",
+       "std_test_score     0.003688   0.005653   0.001751   0.002695        0.0  \n",
+       "mean_fit_time     47.848502  89.344615  47.042878  66.248002  53.058155  \n",
+       "param_svc__C            1.0      100.0        0.1        1.0        0.1  \n",
+       "param_svc__gamma          1         10          1         10         10  "
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "param_grid_svc = {\n",
     "    \"svc__C\": [0.1, 1, 10, 50, 100], \n",
@@ -2724,6 +2986,7 @@
     "random_search_svc = RandomizedSearchCV(\n",
     "    estimator=make_pipeline(ct, SVC()),\n",
     "    param_distributions=param_grid_svc, \n",
+    "    n_jobs=-1,\n",
     "    n_iter=10,  \n",
     "    scoring=recall_scorer,  \n",
     "    refit=True,  \n",
@@ -2747,39 +3010,6 @@
     ").T\n",
     "\n",
     "svc_df_sorted"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "..."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "..."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "..."
    ]
   },
   {
