--- a/hw5.ipynb
+++ b/hw5.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 47,
    "metadata": {
     "deletable": false,
     "editable": false
@@ -3068,112 +3068,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found existing installation: numpy 1.26.4\n",
+      "Uninstalling numpy-1.26.4:\n",
+      "  Successfully uninstalled numpy-1.26.4\n",
+      "Collecting numpy==2.0\n",
+      "  Downloading numpy-2.0.0-cp312-cp312-manylinux_2_17_x86_64.manylinux2014_x86_64.whl.metadata (60 kB)\n",
+      "Downloading numpy-2.0.0-cp312-cp312-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (19.0 MB)\n",
+      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m19.0/19.0 MB\u001b[0m \u001b[31m10.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0ma \u001b[36m0:00:01\u001b[0m\n",
+      "Installing collected packages: numpy\n",
+      "\u001b[31mERROR: pip's dependency resolver does not currently take into account all the packages that are installed. This behaviour is the source of the following dependency conflicts.\n",
+      "basemap 1.4.1 requires numpy<1.27,>=1.21; python_version >= \"3.8\", but you have numpy 2.0.0 which is incompatible.\n",
+      "basemap 1.4.1 requires packaging<24.0,>=16.0; python_version >= \"3.5\", but you have packaging 24.2 which is incompatible.\u001b[0m\u001b[31m\n",
+      "\u001b[0mSuccessfully installed numpy-2.0.0\n"
+     ]
+    }
+   ],
    "source": [
-    "..."
+    "!pip uninstall -y numpy\n",
+    "!pip install numpy==2.0"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[33mWARNING: Skipping shap as it is not installed.\u001b[0m\u001b[33m\n",
+      "Collecting shap\n",
+      "  Downloading shap-0.47.0-cp312-cp312-manylinux_2_17_x86_64.manylinux2014_x86_64.whl.metadata (24 kB)\n",
+      "Requirement already satisfied: numpy in /opt/conda/lib/python3.12/site-packages (from shap) (2.0.0)\n",
+      "Requirement already satisfied: scipy in /opt/conda/lib/python3.12/site-packages (from shap) (1.14.1)\n",
+      "Requirement already satisfied: scikit-learn in /opt/conda/lib/python3.12/site-packages (from shap) (1.6.0)\n",
+      "Requirement already satisfied: pandas in /opt/conda/lib/python3.12/site-packages (from shap) (2.2.3)\n",
+      "Requirement already satisfied: tqdm>=4.27.0 in /opt/conda/lib/python3.12/site-packages (from shap) (4.67.1)\n",
+      "Requirement already satisfied: packaging>20.9 in /opt/conda/lib/python3.12/site-packages (from shap) (24.2)\n",
+      "Collecting slicer==0.0.8 (from shap)\n",
+      "  Downloading slicer-0.0.8-py3-none-any.whl.metadata (4.0 kB)\n",
+      "Requirement already satisfied: numba>=0.54 in /opt/conda/lib/python3.12/site-packages (from shap) (0.60.0)\n",
+      "Requirement already satisfied: cloudpickle in /opt/conda/lib/python3.12/site-packages (from shap) (3.1.0)\n",
+      "Requirement already satisfied: typing-extensions in /opt/conda/lib/python3.12/site-packages (from shap) (4.12.2)\n",
+      "Requirement already satisfied: llvmlite<0.44,>=0.43.0dev0 in /opt/conda/lib/python3.12/site-packages (from numba>=0.54->shap) (0.43.0)\n",
+      "Requirement already satisfied: python-dateutil>=2.8.2 in /opt/conda/lib/python3.12/site-packages (from pandas->shap) (2.9.0.post0)\n",
+      "Requirement already satisfied: pytz>=2020.1 in /opt/conda/lib/python3.12/site-packages (from pandas->shap) (2024.1)\n",
+      "Requirement already satisfied: tzdata>=2022.7 in /opt/conda/lib/python3.12/site-packages (from pandas->shap) (2024.2)\n",
+      "Requirement already satisfied: joblib>=1.2.0 in /opt/conda/lib/python3.12/site-packages (from scikit-learn->shap) (1.4.2)\n",
+      "Requirement already satisfied: threadpoolctl>=3.1.0 in /opt/conda/lib/python3.12/site-packages (from scikit-learn->shap) (3.5.0)\n",
+      "Requirement already satisfied: six>=1.5 in /opt/conda/lib/python3.12/site-packages (from python-dateutil>=2.8.2->pandas->shap) (1.17.0)\n",
+      "Downloading shap-0.47.0-cp312-cp312-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (1.0 MB)\n",
+      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.0/1.0 MB\u001b[0m \u001b[31m58.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+      "Downloading slicer-0.0.8-py3-none-any.whl (15 kB)\n",
+      "Installing collected packages: slicer, shap\n",
+      "Successfully installed shap-0.47.0 slicer-0.0.8\n"
+     ]
+    }
+   ],
    "source": [
-    "..."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "..."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "..."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "..."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "..."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "..."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "..."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "..."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "..."
+    "!pip uninstall -y shap\n",
+    "!pip install shap"
    ]
   },
   {
@@ -3186,6 +3152,28 @@
     "<!-- END QUESTION -->\n",
     "\n",
     "<br><br>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import shap\n",
+    "\n",
+    "pipe_rf = make_pipeline(ct, RandomForestClassifier())\n",
+    "pipe_rf.fit(X_train, y_train)\n",
+    "\n",
+    "rf_model = pipe_rf.named_steps['randomforestclassifier']\n",
+    "\n",
+    "explainer = shap.TreeExplainer(rf_model)\n",
+    "\n",
+    "shap_values = explainer.shap_values(X_train)\n",
+    "\n",
+    "shap.summary_plot(shap_values, X_train, feature_names=X_train.columns)\n",
+    "\n",
+    "#Taking too long to run"
    ]
   },
   {
@@ -3235,134 +3223,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cross-validation results on training data:\n",
+      "    Train Time (s)    Test Time (s)     Train Recall Validation Recall\n",
+      "0  0.0114 ± 0.0006  0.1244 ± 0.0187  0.6097 ± 0.0029   0.6083 ± 0.0062\n",
+      "\n",
+      "Final Test Recall Score: 0.6101\n"
+     ]
+    }
+   ],
    "source": [
-    "..."
+    "best_C = 10\n",
+    "\n",
+    "pipe_lr = make_pipeline(\n",
+    "    ct, \n",
+    "    LogisticRegression(C=best_C, max_iter=10000, random_state=123)\n",
+    ")\n",
+    "\n",
+    "results = cross_validate(\n",
+    "    pipe_lr, X_train, y_train, return_train_score=True, scoring=recall_scorer\n",
+    ")\n",
+    "\n",
+    "formatted_results = {\n",
+    "    \"Train Time (s)\": f\"{np.mean(results['score_time']):.4f} ± {np.std(results['score_time']):.4f}\",\n",
+    "    \"Test Time (s)\": f\"{np.mean(results['fit_time']):.4f} ± {np.std(results['fit_time']):.4f}\",\n",
+    "    \"Train Recall\": f\"{np.mean(results['train_score']):.4f} ± {np.std(results['train_score']):.4f}\",\n",
+    "    \"Validation Recall\": f\"{np.mean(results['test_score']):.4f} ± {np.std(results['test_score']):.4f}\",\n",
+    "}\n",
+    "\n",
+    "formatted_results_df = pd.DataFrame([formatted_results])\n",
+    "print(\"Cross-validation results on training data:\")\n",
+    "print(formatted_results_df)\n",
+    "\n",
+    "pipe_lr.fit(X_train, y_train)  \n",
+    "test_score = recall_scorer(pipe_lr, X_test, y_test) \n",
+    "\n",
+    "print(\"\\nFinal Test Recall Score:\", round(test_score, 4))"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "..."
+    "The validation recall score obtained from cross-validation was 0.6083 ± 0.0062, while the final test recall score is 0.6101. Since the test score is very close to the validation score, it suggests that our model is generalizing well to unseen data."
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "..."
+    "The small difference between validation and test recall indicates that our model is performing consistently and is not overfitting to the training data. This consistency increases our confidence in the results."
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "..."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "..."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "..."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "..."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "..."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "..."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "..."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "..."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "..."
+    "Since we selected C using cross-validation and tested it on a separate test set, the impact of optimization bias should be minimal."
    ]
   },
   {
@@ -3496,6 +3421,15 @@
     "</div>\n",
     "\n",
     "_Points:_ 2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Supervised machine learning models are capable of giving powerful insights with a high accuracy. A key takeaway is the importance of balancing bias and variance to ensure good generalization. Choosing the right evaluation metrics, like recall or F1-score, is crucial, especially for imbalanced datasets. Additionally, effective data preprocessing and cross-validation play a significant role in improving model performance.\n",
+    "\n",
+    "In this assignment, we learnt the importance of finding the right model to give accurate results. Selecting the best model requires careful consideration of various performance metrics while ensuring that the chosen model generalizes well to unseen data. "
    ]
   },
   {
